crates/syntax/snapshots/lexer/err/string_newline.snap
---
source: crates/syntax/src/tests.rs
expression: actual
input_file: crates/syntax/snapshots/lexer/err/string_newline.lua

---
[
    Token {
        kind: Str,
        len: 1,
    },
    Token {
        kind: Whitespace,
        len: 1,
    },
    Token {
        kind: Ident,
        len: 8,
    },
    Token {
        kind: Str,
        len: 1,
    },
    Token {
        kind: Whitespace,
        len: 1,
    },
]

[
    SyntaxError(
        "Unexpected newline in string",
        0..1,
    ),
    SyntaxError(
        "Unexpected newline in string",
        10..11,
    ),
]
